docker上で動作するように

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,14 +1,38 @@
-version: "3"
+version: '3'
+
 services:
+  seigo2016-lms:
+    build: .
+    image: seigo2016-lms-app
+    container_name: seigo2016-lms
+    ports:
+      - ${WEB_PORT}:${WEB_PORT}
+    environment:
+      - TZ=Asia/Tokyo
+      - SECRET_KEY=${SECRET_KEY}
+      - DB_HOST=db
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+    restart: always
+    networks:
+      - default
+
+
   mysql:
     image: mariadb
     volumes:
       - ./db/sql:/docker-entrypoint-initdb.d
-      - ./data:/var/lib/mysql
+      - ./db/data:/var/lib/mysql
     ports:
       - ${DB_PORT}:${DB_PORT}
+    container_name: db
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_HOST}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - default
+
